--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "buttube",
-  "version": "0.3.2",
+  "version": "0.4.2",
   "description": "A music package with buttons",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@discordjs/opus": "^0.3.3",
-    "discord-buttons": "^4.0.0",
-    "discord.js": "^12.5.3",
-    "distube": "^2.8.15",
-    "ffmpeg-static": "^4.3.0",
+    "@discordjs/opus": "^0.5.3",
+    "discord.js": "^13.0.1",
+    "distube": "^3.0.0-beta.35",
+    "ffmpeg-static": "^4.4.0",
     "quickmongo": "^3.0.2",
-    "ytdl-core": "^4.9.0"
+    "ytdl-core": "^4.9.1"
   },
   "repository": {
     "type": "git",
