--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "dependencies": {
     "@discordjs/opus": "^0.5.3",
-    "discord.js": "^13.0.1",
-    "distube": "^3.0.0-beta.38",
+    "discord.js": "^13.1.0",
+    "distube": "^2.8.18",
     "ffmpeg-static": "^4.4.0",
     "quickmongo": "^3.0.2",
     "ytdl-core": "^4.9.1"
